Fixes aligning video titles

--- a/angu/styles/components/_persona.scss
+++ b/angu/styles/components/_persona.scss
@@ -136,6 +136,10 @@
     h3 {
       font-weight: normal;
       font-size: 21px;
+      line-height: 1.1;
+      min-height: 3.3em;
+      display: flex;
+      align-items: flex-end;
     }
 
     p {
